<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FocusActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/iklan"
        android:id="@+id/imvIklan"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/imvIklan"
        android:layout_margin="20dp"
        android:id="@+id/etSearch"
        android:hint="@string/search"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:id="@+id/llMenu"
        android:layout_marginTop="@dimen/dip_20"
        app:layout_constraintTop_toBottomOf="@id/etSearch"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/btnNews"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:cardCornerRadius="@dimen/dip_20">

                <ImageView
                    android:src="@drawable/food"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:padding="@dimen/dip_20"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/news"
                android:textSize="@dimen/sp_16"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/btnNearby"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:cardCornerRadius="@dimen/dip_20">

                <ImageView
                    android:src="@drawable/food"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:padding="@dimen/dip_20"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/nearby"
                android:textSize="@dimen/sp_16"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/btnBestSelling"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:cardCornerRadius="@dimen/dip_20">

                <ImageView
                    android:src="@drawable/food"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:padding="@dimen/dip_20"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/bestselling"
                android:textSize="@dimen/sp_16"/>
        </LinearLayout>
    </LinearLayout>
    <View
        app:layout_constraintTop_toBottomOf="@id/llMenu"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/lineD"
        android:layout_marginTop="@dimen/dip_20"
        android:layout_marginEnd="@dimen/dip_20"
        android:layout_marginStart="@dimen/dip_20"
        android:background="@android:color/darker_gray"/>
<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/lineD"
    android:text="MyOlehOleh Khas Region"
    android:layout_marginStart="@dimen/dip_20"
    android:layout_marginEnd="@dimen/dip_20"
    android:layout_marginTop="@dimen/margin_10"
    android:padding="@dimen/margin_10"
    android:textColor="@color/white"
    android:id="@+id/tvKhasKota"
    android:background="@color/bluegreen"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:id="@+id/llKota"
        android:layout_marginTop="@dimen/dip_20"
        app:layout_constraintTop_toBottomOf="@id/tvKhasKota"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/btnSby"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:cardCornerRadius="@dimen/dip_20">

                <ImageView
                    android:src="@drawable/sby"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    android:padding="@dimen/dip_20"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/sby"
                android:textSize="@dimen/sp_16"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/btnMlg"
                android:layout_marginLeft="@dimen/margin_10"
                android:layout_marginRight="@dimen/margin_10"
                app:cardCornerRadius="@dimen/dip_20">

                <ImageView
                    android:src="@drawable/mlg"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:adjustViewBounds="true"
                    android:scaleType="centerInside"
                    android:padding="@dimen/dip_20"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_8"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:text="@string/mlg"
                android:textSize="@dimen/sp_16"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>